# 2dgame

./: CMakeLists.txt  app  compile.sh  program
src/: .Camera.cpp.swp  .Game.cpp.swp  .Map.cpp.swp  .Map.h.swp  .Player.cpp.swp  .TitleScreen.cpp.swp  Camera.cpp  Camera.h  Game.cpp  Game.h  GameState.h  Map.cpp  Map.h  MapConfig.h  Player.cpp  Player.h  Tile.cpp  Tile.h  TitleScreen.cpp  TitleScreen.h  main.cpp  tile_props.json
src/ui/: UIManager.cpp  UIManager.h
